--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "tmp": "0.0.28"
   },
   "dependencies": {
-    "@google/cloud-diagnostics-common": "0.2.5",
     "continuation-local-storage": "^3.1.4",
+    "debug": "^2.2.0",
     "lodash.findindex": "^4.4.0",
     "lodash.isequal": "^4.0.0",
     "methods": "^1.1.1",
