--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ node_js:
 os:
   - linux
 sudo: required
+before_install:
+  - npm install -g yarn --cache-min 999999999
 services:
   - mysql
   - mongodb
