--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: node_js
 node_js:
-   - "0.12"
    - "4"
    - "6"
    - "7"
@@ -10,7 +9,7 @@ sudo: required
 before_install:
   - npm install -g yarn --cache-min 999999999
   - sudo apt-get -qq update
-  - sudo apt-get install build-essential autoconf libtool
+  - sudo apt-get install build-essential autoconf libtool g++
 services:
   - mysql
   - mongodb
