--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: required
 before_install:
   - npm install -g yarn --cache-min 999999999
   - sudo apt-get -qq update
-  - sudo apt-get install build-essential autoconf libtool g++
+  - sudo apt-get install build-essential autoconf libtool g++-4.8
 services:
   - mysql
   - mongodb
