intrusment mongodb module instead of mongodb-core

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "methods": "^1.1.1",
     "semver": "^5.0.1",
     "shimmer": "^1.0.0",
+    "stackman": "^1.2.7",
     "uuid": "^2.0.1"
   }
 }
