--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "continuation-local-storage": "^3.1.4",
+    "debug": "^2.6.3",
     "extend": "^3.0.0",
     "is": "^3.2.0",
     "lodash.findindex": "^4.4.0",
